ci: fix coverage collection by using --cov=.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Run unit tests with coverage
         run: |
-          pytest --maxfail=1 --disable-warnings -q --cov=LMStudioPromptEnhancerNode --cov-report=xml --cov-report=term
+          pytest --maxfail=1 --disable-warnings -q --cov=. --cov-report=xml --cov-report=term
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
